[REFACTOR] Refactor Handler and KeranjangService